--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,6 @@ trim_trailing_whitespace = false
 insert_final_newline = false
 quote_type = single
 
-[*.yaml]
+[*.{yaml,yml}]
 indent_size = 2
 indent_style = space
