--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
 		"prettier": "^2.3.1"
+	},
+	"dependencies": {
+		"uuid": "^3.3.2"
 	}
 }
