--- a/global.yaml
+++ b/global.yaml
@@ -10,6 +10,16 @@ Resources:
       CodeUri: ./backend
       Handler: functions/publishToSns.handler
       Runtime: nodejs14.x
+      Events:
+        apiEvent:
+          Type: Api
+          Properties:
+            Method: post
+            Path: /publishsns
+      Policies:
+        - SNSPublishMessagePolicy:
+            TopicName: !GetAtt JacktripSnsTopic.TopicName
+
       Environment:
         Variables:
           snsTopicArn: !Ref JacktripSnsTopic
@@ -23,18 +33,18 @@ Resources:
       ContentBasedDeduplication: true
       TopicName: JacktripSnsTopic.fifo
 
-  LambdaToSnsPolicy:
-    Type: AWS::SNS::TopicPolicy
-    Properties:
-      PolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action: sns:Publish
-            Resource: !Ref JacktripSnsTopic
-      Topics:
-        - !Ref JacktripSnsTopic
+  # LambdaToSnsPolicy:
+  #   Type: AWS::SNS::TopicPolicy
+  #   Properties:
+  #     PolicyDocument:
+  #       Statement:
+  #         - Effect: Allow
+  #           Principal:
+  #             Service: lambda.amazonaws.com
+  #           Action: sns:Publish
+  #           Resource: !Ref JacktripSnsTopic
+  #     Topics:
+  #       - !Ref JacktripSnsTopic
 
   # IAM Roles
   JacktripStateMachineRole:
