--- a/global.yaml
+++ b/global.yaml
@@ -55,7 +55,7 @@ Resources:
                 Action:
                   - lambda:InvokeFunction
                 Resource:
-                  - Fn::Sub: arn:*:lambda:*:${AWS::AccountId}:function:Jacktrip*
+                  - Fn::Sub: arn:*:lambda:*:${AWS::AccountId}:function:jacktrip*
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
 
