--- a/global.yaml
+++ b/global.yaml
@@ -19,10 +19,30 @@ Resources:
       Policies:
         - SNSPublishMessagePolicy:
             TopicName: !GetAtt JacktripSnsTopic.TopicName
-
+        - DynamoDBCrudPolicy:
+            TableName: !Ref UserServerTable
       Environment:
         Variables:
           snsTopicArn: !Ref JacktripSnsTopic
+          userServerTableName: !Ref UserServerTable
+
+  # DynamoDB
+  UserServerTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      AttributeDefinitions:
+        - AttributeName: user
+          AttributeType: S
+        - AttributeName: serverId
+          AttributeType: S
+      KeySchema:
+        - AttributeName: user
+          KeyType: HASH
+        - AttributeName: serverId
+          KeyType: RANGE
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1
 
   # SNS
   JacktripSnsTopic:
